--- a/pinax/projects/sample_group_project/requirements.txt
+++ b/pinax/projects/sample_group_project/requirements.txt
@@ -10,6 +10,8 @@ smartypants==1.6.0.3
 Markdown==2.0.1
 textile==2.1.3
 Creoleparser==0.6.1 # meh FIXME SOON!
+diff-match-patch==20090110
+django-atomformat==0.1.0dev
 
 django-notification==0.1.3
 django-openid==0.1.1
