--- a/pinax/projects/code_project/requirements.txt
+++ b/pinax/projects/code_project/requirements.txt
@@ -26,7 +26,7 @@ django-threadedcomments==0.5.1
 django-ajax-validation==0.1.3
 django-avatar==1.0.2
 django-uni-form==0.5.1
-django-wikiapp==0.1.2
+django-wikiapp==0.2.0dev
 django-attachments==0.3
 django-markup==0.2
 django-sorting==0.1.1
