--- a/pinax/projects/private_beta_project/requirements.txt
+++ b/pinax/projects/private_beta_project/requirements.txt
@@ -22,4 +22,4 @@ django-timezones==0.1.2
 django-bookmarks==0.1.0
 django-ajax-validation==0.1.3
 django-uni-form==0.5.1
-django-wikiapp==0.1.2
+django-wikiapp==0.2.0dev
