--- a/pinax/projects/sample_group_project/requirements.txt
+++ b/pinax/projects/sample_group_project/requirements.txt
@@ -23,7 +23,7 @@ django-timezones==0.1.2
 django-bookmarks==0.1.0
 django-ajax-validation==0.1.3
 django-uni-form==0.5.1
-django-wikiapp==0.1.2
+django-wikiapp==0.2.0dev
 django-tagging==0.3_pre
 django-avatar==1.0.2
 django-threadedcomments==0.5.1
