--- a/pinax/projects/social_project/requirements.txt
+++ b/pinax/projects/social_project/requirements.txt
@@ -53,7 +53,7 @@ django-threadedcomments==0.5.1
 django-timezones==0.1.2
 django-uni-form==0.5.1
 django-voting==0.1_pre
-django-wikiapp==0.1.2
+django-wikiapp==0.2.0dev
 photologue==2.1
 django-attachments==0.3
 django-markup==0.2
