--- a/pinax/projects/blog_project/requirements.txt
+++ b/pinax/projects/blog_project/requirements.txt
@@ -17,6 +17,7 @@ http://www.aeracode.org/releases/south/south-0.6.1.tar.gz
 -e svn+http://django-db-log.googlecode.com/svn/trunk#egg=djangodblog
 -e hg+https://sorl-thumbnail.googlecode.com/hg/#egg=sorl
 django-oembed==0.1.0
+django-email-confirmation==0.1.3
 -e svn+http://django-template-utils.googlecode.com/svn/trunk#egg=template_utils
 -e hg+https://bitbucket.org/montylounge/django-proxy/#egg=django_proxy
 
