--- a/pinax/projects/blog_project/requirements.txt
+++ b/pinax/projects/blog_project/requirements.txt
@@ -18,6 +18,9 @@ http://www.aeracode.org/releases/south/south-0.6.1.tar.gz
 -e hg+https://sorl-thumbnail.googlecode.com/hg/#egg=sorl
 django-oembed==0.1.0
 django-email-confirmation==0.1.3
+django-pagination==1.0.5
+django-timezones==0.1.4
+django-staticfiles==0.1.2
 -e svn+http://django-template-utils.googlecode.com/svn/trunk#egg=template_utils
 -e hg+https://bitbucket.org/montylounge/django-proxy/#egg=django_proxy
 
